tests/errors/type_check/control_flow/branch_non_bool.sim

        fn f(n: i64) {
            entry:
            branch(copy n) [true: yes, false: no]
            yes:
            return
            no:
            return
        }
        