tests/errors/type_check/control_flow/branch_non_bool.err.expected
error: at 4:13: [TC-BranchConditionNotBool] In function 'f', block 'entry': branch condition must be bool, found i64
   |
 4 |             branch(copy n) [true: yes, false: no]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
